--- a/README
+++ b/README
@@ -1,3 +1,46 @@
+The Redmi Note 8 Pro (codenamed _"begonia"_) are high-end mid-range smartphones from Xiaomi announced and released in August 2019.
+
+## Device specifications
+
+| Device                  | Xiaomi Redmi Note 8 Pro                                      |
+| ----------------------- | :----------------------------------------------------------- |
+| SoC                     | MediaTek Helio G90T                                          |
+| CPU                     | octa-core ARM Cortex - (A76 2x2.05GHz + A55 6x2GHz)          |  
+| GPU                     | Mali G76 MC4 800MHz                                          |
+| Memory                  | 6GB / 8GM RAM (LPDDR4x)                                      |
+| Shipped Android version | Android 9 Pie                                                |
+| Storage                 | 64GB / 128GB UFS2.1 flash storage                            |
+| Battery                 | Non-removable 4,500mAh (typ) Li Polymer                      |
+| Dimensions              | 161.7 x 76.4 x 8.81 mm                                       |
+| Display                 | 16.58cm (6.53) Dot Notch HDR Display                         |
+| Rear camera 1           | 64MP, 0.8μm, f/1.89, Dual LED flash                          |
+| Rear camera 2      (Ultra-wide angle lens)     | 8MP, 1.12μm，f/2.2，FOV 120°, Dual LED flash                  |
+| Front camera            | 20MP, 1-micron pixels, f/2.2 1080p 30 fps video, Selfie-light|
+
+## Device picture
+
+![Xiaomi Redmi Note 5 Pro](https://www1-lw.xda-cdn.com/files/2018/02/Xiaomi-Redmi-Note-5-and-Redmi-Note-5-Pro-Forums-now-Open.png)
+
+## Copyright
+
+```
+#
+# Copyright (C) 2020 The LineageOS Project
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+
 Linux kernel
 ============
 
